--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,4 @@
-$brand-color: #4182e4;
+$brand-color: #0abe96;
 $secondary-brand-color: #4182e4;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
