--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 $brand-color: #0abe96;
-$secondary-brand-color: #4182e4;
+$secondary-brand-color: #0abe96;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
