--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,11 @@
 
 <html lang="en">
 <head>
+	<script type="text/javascript">
+	    var host = "flowersales.co";
+	    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        	window.location.protocol = "https";
+	  </script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
