--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -11,9 +11,9 @@
 }
 
 .testimonial {
-	background: #f5f5f5;
+	background: #ffffff;
 	margin: 0;
-	padding: 100px 0;
+	padding: 20px 0;
 
 	.testimonial-block {
 		max-width: 750px;
