Added gsuite verify

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         	window.location.protocol = "https";
 	  </script>
 	<meta charset="utf-8">
+	<meta name="google-site-verification" content="WMkBzgEi2HEDjMYo5r0htMp-Kkax4A1eHfueTIfw_P4" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
