--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,47 +1,59 @@
-.bottom-cta {
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
-	color: #fff;
-	text-align: center;
-	margin: 0;
-	padding: 100px 0;
-
-	h2 {
-		margin-bottom: 50px;
-	}
-}
-
-.testimonial {
-	background: #ffffff;
-	margin: 0;
-	padding: 20px 0;
-
-	.testimonial-block {
-		max-width: 750px;
-		width: 98%;
-		margin: 0 auto;
-
-		@media #{$tablet} {
-			@include flexbox;
-
-			blockquote {
-				-webkit-flex: 1;
-				flex: 1;
-			}
-		}
-	}
-}
-
 .hero {
 	color: #ffffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
-	padding-top: 50px;
+	height: 100vh;
+	min-height: 550px;
+	background-color: #333;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+
+	&:before {
+		content: "";
+		background: linear-gradient(to bottom,rgba(0,0,0,.65) 0,rgba(0, 0, 0, 0) 100%);
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		height: 300px;
+}
 
 	p {
 		color: #fff;
 	}
+
+	.inner-hero {
+		display: flex;
+		align-items: center;
+		height: 100%;
+	}
+
+	.hero-text-container {
+		width: 600px;
+		text-align: left;
+
+		h1, h2, p, .button {
+			text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+		}
+	}
+
+	.hero-text-right {
+		position: absolute;
+		right: 0;
+	}
 }
 
+.image {
+	text-align: center;
+}
+
+.bottom-cta {
+	text-align: center;
+
+	h2 {
+		margin-bottom: 12px;
+	}
+}
 
 @media #{$desktop} {
 	.flex {
