--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,4 @@
-$brand-color: #0abe96;
-$secondary-brand-color: #0abe96;
-$middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
+$brand-color: #6ba1f3;
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
